tests/neg/i7247.scala
val x = "foo" match
  case _: (a *: (b: Any)) => ???  // error